koa-useragent added

--- a/package.json
+++ b/package.json
@@ -28,11 +28,11 @@
   },
   "license": "MIT",
   "dependencies": {
+    "koa-useragent": "^0.1.5",
     "lodash.assign": "^3.2.0",
     "lodash.camelcase": "^3.0.1",
     "lodash.endswith": "^3.2.0",
     "lodash.forin": "^3.0.2",
-    "lodash.isobject": "^3.0.2",
     "lodash.isplainobject": "^3.2.0",
     "lodash.merge": "^3.3.2",
     "pug": "^2.0.0-beta11"
@@ -53,6 +53,6 @@
     "supertest-koa-agent": "^0.2.1"
   },
   "engines": {
-    "node": ">=0.12.0"
+    "node": ">=4.0.0"
   }
 }
