--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "koa-pug",
-  "version": "3.0.0-2",
+  "name": "koa-pug-by-useragent",
+  "version": "0.9,0",
   "description": "A Pug middleware for Koa",
   "main": "index.js",
   "repository": {
