--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "lodash.camelcase": "^3.0.1",
     "lodash.endswith": "^3.2.0",
     "lodash.forin": "^3.0.2",
+    "lodash.isobject": "^3.0.2",
     "lodash.isplainobject": "^3.2.0",
     "lodash.merge": "^3.3.2",
     "pug": "^2.0.0-beta11"
